--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
-    "[css]": {
-        "editor.suggest.insertMode": "replace",
-        "editor.insertSpaces": false,
+    "[html]": {
         "editor.tabSize": 4,
+        "editor.insertSpaces": false,
+    },
+    "[css]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": false,
+    },
+    "[typescript]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": false,
     }
 }
